force-app/main/default/objects/Slack_Request__c/Slack_Request__c.object-meta.xml
<CustomObject>
    <label>Slack Request</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Slack Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>