force-app/main/default/objects/Slack_Request__c/fields/has_PDF__c.field-meta.xml
<CustomField>
    <fullName>has_PDF__c</fullName>
    <label>has PDF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>