force-app/main/default/objects/Slack_Request__c/fields/Slack_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Team_Id__c</fullName>
    <label>Slack Team Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>